# todo_api_rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20250601213110_create_todos_table.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs
