[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.0", features=["full"]}
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
uuid = {version="1.8.0",features=["v4","serde"]}
sqlx = {version="0.8.6",features=["runtime-tokio","sqlite","uuid"]}
dotenvy = "0.15.7"

